# Decipher Stranger # UI # Created by penghaitao 5/25

--- a/app/src/main/res/layout/activity_game_list.xml
+++ b/app/src/main/res/layout/activity_game_list.xml
@@ -1,72 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <RelativeLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/tab_blue"
-        android:orientation="vertical" >
+        android:background="@color/tab"
+        android:layout_gravity="center_horizontal">
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
             android:id="@+id/gamelist_back_button"
             android:onClick="GameListOnClick"
-            android:background="@drawable/shake_back"
-            android:layout_alignParentTop="true"
+            android:background="@null"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/home_btn"
+            android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/game"
-            android:textColor="@color/white"
-            android:textSize="22dp"
+            android:textColor="@color/text_hint"
+            android:textSize="20dp"
+            android:layout_margin="10dp"
+            android:id="@+id/shake_title"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/gamelist_back_button" />
+            android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
 
     <RelativeLayout
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:id="@+id/game_rsp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/mainpage_btn_bg"
+        android:background="@drawable/game_rsp_bg"
         android:onClick="GameListOnClick"
         android:layout_gravity="center_horizontal">
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:id="@+id/imageView3"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/game_rsp_icon"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/game_rsp"
-            android:paddingLeft="20dp"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/imageView3" />
-
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="35dp"
             android:text="设置"
             android:id="@+id/button1"
+            android:textSize="18dp"
+            android:textColor="@color/text_checked"
+            android:background="@drawable/login_register_bg"
             android:onClick="GameListOnClick"
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
@@ -75,39 +63,25 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:id="@+id/game_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/mainpage_btn_bg"
+        android:background="@drawable/game_number_bg"
         android:onClick="GameListOnClick"
         android:layout_gravity="center_horizontal">
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:id="@+id/imageView4"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/game_number_icon"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/game_number"
-            android:paddingLeft="20dp"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/imageView4" />
-
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="35dp"
             android:text="设置"
             android:id="@+id/button2"
             android:onClick="GameListOnClick"
+            android:textSize="18dp"
+            android:textColor="@color/text_checked"
+            android:background="@drawable/login_register_bg"
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true" />
