--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -157,7 +157,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/switch1"
-                android:thumb="@color/tab"
+                android:thumb="@color/sidebar"
                 android:textOff="关闭"
                 android:textOn="打开"
                 android:textColor="@color/text_checked"
@@ -194,7 +194,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/switch2"     
-                android:thumb="@color/tab"        
+                android:thumb="@color/sidebar"        
                 android:textOff="关闭"
                 android:textOn="打开"
                 android:layout_centerVertical="true"
