--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
     </style>
 
     <!-- Customize your theme here. -->
+    <style name="AppBaseTheme" parent="android:Theme.Light"/>
     <style name="NoTheme" parent="Theme.AppCompat.Light.NoActionBar" />
 
     <!-- pup_up 弹窗样式 -->
@@ -25,6 +26,15 @@
         <item name="android:backgroundDimEnabled">true</item>
         <!-- 模糊 -->
     </style>
+
+    <!-- dialog 弹窗样式 -->
+    <style name="Dialog" parent="android:style/Theme.Dialog">
+        <item name="android:background">#00000000</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+    </style>
+    
     <style name="chat_text_date_style">
         <item name="android:padding">2dp</item>
         <item name="android:textColor">@android:color/black</item>
