--- a/app/src/main/res/layout/activity_game_rsp_set_grade.xml
+++ b/app/src/main/res/layout/activity_game_rsp_set_grade.xml
@@ -1,58 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <RelativeLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/tab_blue"
-        android:orientation="vertical" >
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:id="@+id/gamelist_back_button"
-            android:onClick="GradeSetOnClick"
-            android:background="@drawable/shake_back"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+        android:background="@color/tab"
+        android:layout_gravity="center_horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/grade_settings"
-            android:textColor="@color/white"
-            android:textSize="22dp"
+            android:textColor="@color/text_hint"
+            android:textSize="20dp"
+            android:layout_margin="10dp"
+            android:id="@+id/shake_title"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/gamelist_back_button" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:text="@string/save"
-            android:id="@+id/save_btn"
-            android:textSize="16dp"
-            android:onClick="GradeSetOnClick"
-            android:background="@drawable/tab_btn_bg"
-            android:layout_marginRight="10dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true" />
+            android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/login_btn_normal"
         android:layout_gravity="center_horizontal">
 
         <EditText
@@ -61,7 +40,11 @@
             android:inputType="number"
             android:ems="10"
             android:id="@+id/editText1"
-            android:layout_margin="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/text_checked"
             android:background="@drawable/input_bar_bg"
             android:layout_gravity="center_horizontal" />
 
@@ -70,9 +53,9 @@
             android:layout_height="wrap_content"
             android:text="预设分值"
             android:textSize="16dp"
-            android:layout_marginLeft="10dp"
+            android:textColor="@color/text_hint"
+            android:layout_marginLeft="20dp"
             android:layout_marginBottom="20dp"/>
-
 
         <LinearLayout
             android:orientation="vertical"
@@ -89,7 +72,10 @@
             android:inputType="number"
             android:ems="10"
             android:id="@+id/editText2"
-            android:layout_margin="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/input_bar_bg"
             android:layout_gravity="center_horizontal" />
 
@@ -98,9 +84,22 @@
             android:layout_height="wrap_content"
             android:text="最大局数"
             android:textSize="16dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="12dp"/>
+            android:textColor="@color/text_hint"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="20dp"/>
 
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/save"
+        android:id="@+id/save_btn"
+        android:textSize="22dp"
+        android:onClick="GradeSetOnClick"
+        android:layout_marginTop="30dp"
+        android:textColor="@color/text_checked"
+        android:background="@drawable/login_button_bg"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
