--- a/app/src/main/res/layout/activity_shake_portrait.xml
+++ b/app/src/main/res/layout/activity_shake_portrait.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@drawable/login_input_bg">
 
     <ImageView
         android:layout_width="300dp"
