--- a/app/src/main/res/layout/activity_nearby_info.xml
+++ b/app/src/main/res/layout/activity_nearby_info.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="好友信息"
+            android:text="用户信息"
             android:textColor="@color/text_hint"
             android:textSize="20dp"
             android:layout_margin="10dp"
