--- a/app/src/main/res/layout/contact_info.xml
+++ b/app/src/main/res/layout/contact_info.xml
@@ -1,12 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/tab"
+        android:layout_gravity="center_horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="好友信息"
+            android:textColor="@color/text_hint"
+            android:textSize="20dp"
+            android:layout_margin="10dp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+
+    </RelativeLayout>
+
     <LinearLayout
+        android:layout_marginTop="10dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/grey">
+        android:orientation="horizontal">
         <ImageView
             android:layout_width="50dip"
             android:layout_height="50dip"
@@ -25,6 +46,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dip"
                     android:textSize="18dip"
+                    android:textColor="@color/text_checked"
                     android:id="@+id/friend_name"/>
                 <ImageView
                     android:layout_width="20dip"
@@ -42,93 +64,101 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dip"
-                    android:text="账号："/>
+                    android:textColor="@color/text_hint"
+                    android:text="解密账号："/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dip"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@color/text_hint"
                     android:id="@+id/friend_account" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-    <view
-        android:layout_width="fill_parent"
-        android:layout_height="2px"
-        class="android.support.v7.widget.LinearLayoutCompat"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/shape_line"
-        android:layout_alignParentBottom="true"/>
+
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dip"
-            android:textSize="18dip"
-            android:text="邮箱："/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dip"
-            android:id="@+id/friend_email"/>
+        android:orientation="vertical"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/login_input_bg"
+        android:layout_gravity="center_horizontal">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dip"
+                android:textSize="18dip"
+                android:textColor="@color/text_hint"
+                android:text="邮箱："/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dip"
+                android:textColor="@color/text_checked"
+                android:id="@+id/friend_email"/>
+        </LinearLayout>
+        <view
+            android:layout_width="fill_parent"
+            android:layout_height="2px"
+            class="android.support.v7.widget.LinearLayoutCompat"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/shape_line"
+            android:layout_alignParentBottom="true"/>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dip"
+                android:textSize="18dip"
+                android:textColor="@color/text_hint"
+                android:text="生日："/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dip"
+                android:textColor="@color/text_checked"
+                android:id="@+id/friend_birth"/>
+        </LinearLayout>
+        <view
+            android:layout_width="fill_parent"
+            android:layout_height="2px"
+            class="android.support.v7.widget.LinearLayoutCompat"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/shape_line"
+            android:layout_alignParentBottom="true"/>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dip"
+                android:textSize="18dip"
+                android:textColor="@color/text_hint"
+                android:text="手机："/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dip"
+                android:textColor="@color/text_checked"
+                android:id="@+id/friend_phone"/>
+        </LinearLayout>
+    
     </LinearLayout>
-    <view
-        android:layout_width="fill_parent"
-        android:layout_height="2px"
-        class="android.support.v7.widget.LinearLayoutCompat"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/shape_line"
-        android:layout_alignParentBottom="true"/>
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dip"
-            android:textSize="18dip"
-            android:text="生日："/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dip"
-            android:id="@+id/friend_birth"/>
-    </LinearLayout>
-    <view
-        android:layout_width="fill_parent"
-        android:layout_height="2px"
-        class="android.support.v7.widget.LinearLayoutCompat"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/shape_line"
-        android:layout_alignParentBottom="true"/>
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dip"
-            android:textSize="18dip"
-            android:text="手机："/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dip"
-            android:id="@+id/friend_phone"/>
-    </LinearLayout>
-    <view
-        android:layout_width="fill_parent"
-        android:layout_height="2px"
-        class="android.support.v7.widget.LinearLayoutCompat"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/shape_line"
-        android:layout_alignParentBottom="true"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@color/grey"
         android:orientation="vertical">
         
         <Button
@@ -138,16 +168,20 @@
             android:layout_marginLeft="20dip"
             android:layout_marginRight="20dip"
             android:layout_marginBottom="20dip"
-            android:textSize="15dip"
             android:text="发送消息"
+            android:textColor="@color/btn_text"
+            android:textSize="22dp"
+            android:background="@drawable/login_button_bg"
             android:id="@+id/send_message"/>
         <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dip"
             android:layout_marginRight="20dip"
-            android:textSize="15dip"
+            android:textColor="@color/btn_text"
+            android:textSize="22dp"
             android:text="删除好友"
+            android:background="@drawable/login_button_bg"
             android:id="@+id/delete_friend"/>
     </LinearLayout>
     
