# Decipher Stranger # UI # Created by penghaitao 5/25

--- a/app/src/main/res/layout/activity_invitation.xml
+++ b/app/src/main/res/layout/activity_invitation.xml
@@ -7,35 +7,62 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/invitationImage"
+        android:background="@drawable/invitation_start_01"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:layout_width="65dp"
+        android:layout_height="120dp"
         android:id="@+id/receiveInvitation"
         android:onClick="InvitationOnClick"
-        android:text="获 取"
-        android:textSize="18dp"
-        android:layout_margin="5dp"
-        android:textColor="@color/text_checked"
-        android:background="@drawable/button_bg"
+        android:background="@drawable/invitation_receive"
+        android:layout_marginLeft="40dp"
+        android:layout_marginBottom="20dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:id="@+id/sendInvitation"
         android:onClick="InvitationOnClick"
-        android:text="发 送"
-        android:textSize="18dp"
-        android:layout_margin="5dp"
-        android:textColor="@color/text_checked"
-        android:background="@drawable/button_bg"
+        android:background="@drawable/invitation_send"
+        android:layout_marginRight="45dp"
+        android:layout_marginBottom="45dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="获取"
+        android:id="@+id/textView4"
+        android:gravity="center"
+        android:textSize="20dp"
+        android:layout_marginBottom="14dp"
+        android:textColor="@color/text_hint"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/receiveInvitation"
+        android:layout_alignStart="@+id/receiveInvitation"
+        android:layout_alignRight="@+id/receiveInvitation"
+        android:layout_alignEnd="@+id/receiveInvitation" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="发送"
+        android:id="@+id/textView5"
+        android:gravity="center"
+        android:textSize="20dp"
+        android:layout_marginBottom="14dp"
+        android:textColor="@color/text_hint"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/sendInvitation"
+        android:layout_alignEnd="@+id/sendInvitation"
+        android:layout_alignLeft="@+id/sendInvitation"
+        android:layout_alignStart="@+id/sendInvitation" />
 
 </RelativeLayout>
